Update APK link to point to GitHub release

--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <h1>ABC School Student App</h1>
-<a href="sha256:d712a5658796cb2180aaf36d10b212d7bad298b1577636fa73f5a069ab93bd54">APK Link</a>
+<a href="https://github.com/Jeckman03/my-github-page/releases/tag/v1.0.0">APK Link</a>
